# swarmux

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  release-plz.toml
.agents/skills/swarmux/: SKILL.md
.agents/skills/swarmux/reference/: setup.md
docs/: getting-started.md  index.md
src/: beads.rs  cli.rs  config.rs  id.rs  lib.rs  main.rs  model.rs  runtime.rs  schema.rs  store.rs  validation.rs
tests/: beads_adapter.rs  cli_contract.rs  e2e_codex.sh  files_backend.rs  input_validation.rs  popup.rs  runtime_flow.rs
