[package]
name = "swarmux"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Agent-first tmux swarm orchestration CLI for coding tasks."
license = "MIT"
repository = "https://github.com/ghillb/swarmux"
readme = "README.md"
keywords = ["tmux", "cli", "agents", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.32", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v7", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"

[profile.dist]
inherits = "release"
lto = "thin"
