[package]
name = "swarmux"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Agent-first tmux swarm orchestration CLI for coding tasks."
license = "MIT"
repository = "https://github.com/ghillb/swarmux"
readme = "README.md"
keywords = ["tmux", "cli", "agents", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.32", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
dirs = "6.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"

[profile.dist]
inherits = "release"
lto = "thin"
